# headerparser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTES.md  README.rst  TODO.md  high_level.py  lex-opts.md  low_level.py  parser.py  pyproject.toml  setup.cfg  setup.py  spec.md  std.md  tox.ini  util.py
docs/: changelog.rst  conf.py  errors.rst  format.rst  index.rst  parser.rst  requirements.txt  scanner.rst  util.rst
headerparser/: __init__.py  errors.py  lexer.py  normdict.py  parser.py  scanner.py  types.py  util.py
src/headerparser/: __init__.py  errors.py  mypy.py  normdict.py  parscls.py  parser.py  scanner.py  types.py  util.py
test/: test_normdict.py  test_normdict_custom.py  test_normdict_identity.py  test_parser.py  test_parser_action.py  test_parser_additional.py  test_parser_body.py  test_parser_choices.py  test_parser_dest.py  test_parser_eq.py  test_parser_multiname.py  test_parser_next_stanza.py  test_parser_stanzas.py  test_parser_types.py  test_scan_next_stanza.py  test_scan_stanzas.py  test_scanner.py  test_unfold.py
test/test_parsable/: test_parsable.py
test/test_parser/: test_parser.py  test_parser_action.py  test_parser_additional.py  test_parser_body.py  test_parser_choices.py  test_parser_dest.py  test_parser_eq.py  test_parser_multiname.py  test_parser_next_stanza.py  test_parser_stanzas.py  test_parser_types.py
test/test_scanner/: test_scan_next_stanza.py  test_scan_stanzas.py  test_scanner.py
