[aliases]
make=sdist bdist_wheel

[bdist_wheel]
universal=1

[metadata]
name = headerparser
#version = # Set in setup.py
description = argparse for mail-style headers
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = headerparser@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/headerparser

keywords =
    e-mail
    email
    mail
    rfc822
    headers
    rfc2822
    rfc5322
    parser

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Communications :: Email
    Topic :: Communications :: Usenet News
    Topic :: Internet :: WWW/HTTP
    Topic :: Text Processing

project_urls =
    Source Code = https://github.com/jwodder/headerparser
    Bug Tracker = https://github.com/jwodder/headerparser/issues
    Documentation = https://headerparser.readthedocs.io
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4
install_requires =
    six ~= 1.1
