[metadata]
name = headerparser
version = attr:headerparser.__version__
description = argparse for mail-style headers
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = headerparser@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/headerparser

keywords =
    e-mail
    email
    mail
    rfc822
    headers
    rfc2822
    rfc5322
    parser

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Communications :: Email
    Topic :: Communications :: Usenet News
    Topic :: Internet :: WWW/HTTP
    Topic :: Text Processing

project_urls =
    Source Code = https://github.com/jwodder/headerparser
    Bug Tracker = https://github.com/jwodder/headerparser/issues
    Documentation = https://headerparser.readthedocs.io

[options]
packages = find:
package_dir =
    =src
python_requires = ~=3.6

[options.packages.find]
where = src
